# img_classifier

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  backend.Dockerfile  checkpoint.md  client.Dockerfile  compose.yaml  dataset.md  mkdocs.yml  pyproject.toml  tasty_fruit.ipynb  tasty_fruit.md
.github/workflows/: docker-linter.yml  gh-pages.yml  linters.yml  notebook-formater.yml  pre-commit.yml
Backend/app/: main.py
Backend/app/api/: models.py
Backend/app/api/v1/: api_route.py
Backend/app/services/: analysis.py  model_loader.py  model_trainer.py  pipeline.py  preprocessing.py  preview.py
Baseline/: baseline.ipynb  baseline.md  baseline_ResNet.ipynb  baseline_ResNet18.ipynb  baseline_ResNet_18.ipynb  baseline_ResNet_50.ipynb  baseline_SIFT.ipynb  baseline_Vgg16.ipynb  baselone_ResNet_18.ipynb
Client/: app_client.py  client.py  eda_page.py  model_inference.py  model_training_page.py  requirements.txt  run.py
DLModels/: DLModels.md  EfficientNet_model.ipynb  ResNet50_model.ipynb  Yolo_model.ipynb  yolo_dropout.pt
Doc/: hooks.py  mkdocs.yml
Doc/docs/: about.md  index.md  tools.md
Doc/docs/ead/: dataset.md
Docs/: Baseline  CI_CD.md  about.md  api.md  cloudru.md  dataset.md  goskatalog.ipynb  index.md  mvp.md  tools.md  ui.md
Docs/DLModels/: DLModels.md  EfficientNet_model.md  ResNet50_model.md  Yolo_model.md
Docs/EDA/: EDA.md  dataset.md  parser.md
Docs/MLModels/: HOG.md  ML_voting_model.md  SIFT.md  ml_models.md
Docs/ead/: analysis.md  parser.md
Docs/eda/: EDA.md  EDA_Fruits360.md  EDA_Vegetables.md  EDA_tasty_fruit.md  Notebooks  dataset.md  goskatalog.ipynb  parser.md
EDA/: EDA.md  EDA_Fruits360.md  EDA_Vegetables.md  EDA_fruits360.ipynb  EDA_tasty_fruit.md  dataset_merging.ipynb  tasty_fruit.ipynb
EDA/Notebooks/: EDA.ipynb  EDA_fruits360.ipynb  EDA_tasty_fruit.ipynb  dataset_merging.ipynb
MLModels/: HOG_experimets_2.ipynb  ML_voting_model.ipynb  SIFT_experiments.ipynb  ml_models.md  Нелинейные ML-модели.pptx
Notebooks/: download_datasets.ipynb  kaggle.json.example  model_evaluation.ipynb
Tools/: __init__.py  analysis.py  download.py  logger_config.py  notebook.py  notebook.sh  parser.py
backend/app/: main.py
backend/app/api/: models.py
backend/app/api/model/: api_route.py
backend/app/api/v1/: api_route.py
backend/app/services/: analysis.py  model_loader.py  pipeline.py  plot.py  preprocessing.py  preview.py
client/: client.py  eda_page.py
logs/: logger_config.py
puthon/: pyvenv.cfg
python/: pyvenv.cfg
