[tool.poetry]
name = "img-classifier"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Ilya Mevshiy <ilyamevshiy@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AI-YP-24-6/img_classifier"


[tool.poetry.dependencies]
python = "~3.12"
jupyter = "~1.1.1"
ipykernel = "~6.29.5"
pandas = "~2.2.3"
kaggle = "^1.6.17"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
mkdocs-material = "~9.5.41"
mkdocstrings = { extras = ["python"], version = "^0.26.2" }
griffe-typingdoc = "^0.2.7"
mkdocs-jupyter = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip_gitignore = true
