[tool.poetry]
name = "img-classifier"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Ilya Mevshiy <ilyamevshiy@gmail.com>", "Pisarenko Sergei <haggardspark@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AI-YP-24-6/img_classifier"


[tool.poetry.dependencies]
python = "^3.12"
jupyter = "~1.1.1"
ipykernel = "~6.29.5"
pandas = "~2.2.3"
kaggle = "^1.6.17"
scikit-image = "0.25.2"
matplotlib = "~3.10.0"
seaborn = "^0.13.2"
gdown = "^5.2.0"
exif = "^1.6.1"
plotly = "^6.1.0"
notebook = "^7.2.2"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
scikit-learn = "^1.6.1"
opencv-python = "^4.10.0.84"
python-multipart = "^0.0.20"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.client.dependencies]
streamlit = "^1.41.1"
streamlit-project-template = "^0.1.2"
streamlit-option-menu = "^0.4.0"


[tool.poetry.group.linters.dependencies]
pre-commit = "^4.2.0"
pylint = "^3.3.7"
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
pycodestyle = "^2.12.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "~9.6.14"
mkdocstrings = { extras = ["python"], version = "^0.29.1" }
mkdocs-jupyter = "^0.25.1"
griffe-typingdoc = "^0.2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
